samples/_failures_safe/1761412925_62dc45_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_501e9bea.c: In function ‘main’:
./samples/SAFE/__tmp_501e9bea.c:174:12: error: missing terminating " character
  174 |     printf("Graph with %d nodes created\n
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_501e9bea.c:174:5: error: expected expression at end of input
  174 |     printf("Graph with %d nodes created\n
      |     ^~~~~~
./samples/SAFE/__tmp_501e9bea.c:174:5: error: expected declaration or statement at end of input
